syntax = "proto3";

package paneluserpackage;

service PanelUserService {
	rpc TakeRegisteredUser(RegisteredUserRequest) returns (RegisteredUserResponse);
	rpc SendRegisteredUserConfirm(RegisteredUserStatusRequest) returns (RegisteredUserStatusResponse);
	rpc SendUserStatus(UserStatusRequest) returns (UserStatusResponse);
	rpc GetUsers(UsersRequest) returns (Empty);
}

message PanelUserModel {
	string Id = 1;
	string FullName = 2;
	string UserName = 3;
	string Email = 4;
	bool Active = 5;
	string UserStatus = 6;
}

message RegisteredUserRequest {
	PanelUserModel panelUserModel = 1;
}

message RegisteredUserResponse {
	string Id = 1;
	string UserStatus = 2;
}

message RegisteredUserStatusRequest {
	string Id = 1;
}

message RegisteredUserStatusResponse {
	string Id = 1;
	string UserStatus = 2;
}

message UserStatusRequest {
	string Id = 1;
}

message UserStatusResponse {
	string Id = 1;
	bool Active = 2;
}

message UsersRequest {
	repeated PanelUserModel panelUserModel = 1;
}

message Empty {}